--- a/index.html
+++ b/index.html
@@ -9,23 +9,33 @@
     </style>
 </head>
 <body>
-<script src="js/Three.js"></script>
+<script src="js/three.js"></script>
+<script src="js/TrackballControls.js"></script>
 <script>
 
-    var scene = new THREE.Scene();
     var camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 0.1, 1000 );
 
     var renderer = new THREE.WebGLRenderer();
+
+    var scene = new THREE.Scene();
+    scene.background = new THREE.Color(0x444444);
+
     renderer.setSize( window.innerWidth, window.innerHeight );
     document.body.appendChild( renderer.domElement );
+
 
     var geometry = new THREE.BoxGeometry();
     var material = new THREE.MeshBasicMaterial( { vertexColors: THREE.FaceColors} );
 
     var cube = new THREE.Mesh( geometry, material );
     cube.geometry.colorsNeedUpdate = true;
-    for (let i = 0; i < 12; i++) {
-        cube.geometry.faces[i].color.setRGB(Math.random(), Math.random(), Math.random())
+    for (let i = 0; i < 11; i+=2) {
+        let c1 = Math.random();
+        let c2 = Math.random();
+        let c3 = Math.random();
+
+        cube.geometry.faces[i].color.setRGB(c1, c2, c3)
+        cube.geometry.faces[i+1].color.setRGB(c1, c2, c3)
     }
     scene.add( cube );
 
@@ -33,10 +43,20 @@
 
     function animate() {
         requestAnimationFrame( animate );
-        cube.rotation.x += 0.005;
-        cube.rotation.y += 0.05;
+        /*cube.rotation.x += 0.005;
+        cube.rotation.y += 0.05;*/
+        controls.update();
         renderer.render( scene, camera );
     }
+
+    controls = new THREE.TrackballControls( camera, renderer.domElement );
+
+    controls.rotateSpeed = 20.0;
+    controls.zoomSpeed = 1.2;
+    controls.panSpeed = 0.8;
+
+    controls.keys = [ 65, 83, 68 ];
+
     animate();
 </script>
 </body>
