--- a/styling/index.html
+++ b/styling/index.html
@@ -10,7 +10,7 @@
 <body>
      <h1>Micro animation</h1>
     <div class="scene">
-    <div id="ball"></div>
+    <div id="watch"></div>
     </div>
 <!--
     
