--- a/styling.html
+++ b/styling.html
@@ -35,7 +35,7 @@ h1,h2,h3 {
 <body>
      <h1>Micro animation</h1>
     <div class="scene">
-    <div id="ball"></div>
+    <div id="watch"></div>
     </div>
     
     <script>
